--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -412,32 +412,129 @@
                 <a href="#" class="see-all center">Show all Top Voices →</a>
             </div>
             <footer class="footer">
-                    <div class="footer-links">
-                        <a href="#">About</a>
-                        <a href="#">Accessibility</a>
-                        <a href="#">Help Center</a>
-                        <a href="#">Privacy & Terms ▼</a>
-                        <a href="#">Ad Choices</a>
-                        <a href="#">Advertising</a>
-                        <a href="#">Business Services ▼</a>
-                        <a href="#">Get the LinkedIn app</a>
-                        <a href="#">More</a>
-                    </div>
+                <div class="footer-links">
+                    <a href="#">About</a>
+                    <a href="#">Accessibility</a>
+                    <a href="#">Help Center</a>
+                    <a href="#">Privacy & Terms ▼</a>
+                    <a href="#">Ad Choices</a>
+                    <a href="#">Advertising</a>
+                    <a href="#">Business Services ▼</a>
+                    <a href="#">Get the LinkedIn app</a>
+                    <a href="#">More</a>
+                </div>
 
-                    <div class="footer-links">
-                        <a href="#">Professional Community Policies</a>
-                        <a href="#">Careers</a>
-                        <a href="#">Ad Choices</a>
-                        <a href="#">Mobile</a>
-                        <a href="#">Small Business</a>
-                    </div>
+                <div class="footer-links">
+                    <a href="#">Professional Community Policies</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Ad Choices</a>
+                    <a href="#">Mobile</a>
+                    <a href="#">Small Business</a>
+                </div>
 
-                    <div class="footer-copy">
-                        <span>LinkedIn Corporation © 2025</span>
-                    </div>
-                </footer>
+                <div class="footer-copy">
+                    <span>LinkedIn Corporation © 2025</span>
+                </div>
+            </footer>
         </aside>
-        <aside class=""></aside>
+        <aside class="sidebar-right">
+            <div class="first-card card">
+                <div class="first-one">
+                    <H4>Profile language</H4>
+                    <p>English</p>
+                </div>
+                <div class="second-one">
+                    <h4>Public profile & URL</h4>
+                    <p>www.linkedin.com/in/samuel-oreofe-oritu-76b98121a</p>
+                </div>
+            </div>
+            <div class="card premium-ad">
+                <div class="ad-header">
+                    <span class="ad-label"> Ad</span>
+                    <button class="ad-menu">...</button>
+                </div>
+                <img src="https://media.licdn.com/dms/image/v2/D4D03AQG_SEJQtgfeFg/profile-displayphoto-scale_100_100/B4DZf5jNINGkAg-/0/1752238446530?e=1761782400&v=beta&t=ma1btOnurd2RZmM8-GCj327knIpwJwbFozzlY8iVXUg"
+                    alt="Profile" class="premium-avatar">
+
+                <div class="premium-tag">
+                    <span class="gold-box"></span>Premium
+                </div>
+                <p class="premium-text">
+                    Increase your chances of getting hired by <strong>2.6x</strong>
+                </p>
+                <button class="premium-btn">Try for free</button>
+            </div>
+            <div class="card">
+                <h3 class="people-know">People you may know</h3>
+                <p class="people-school">from your school</p>
+            <div class="people">
+                <div class="img-people"> <img
+                        src="https://media.licdn.com/dms/image/v2/D4D03AQG_SEJQtgfeFg/profile-displayphoto-scale_200_200/B4DZf5jNINGkAc-/0/1752238446530?e=1762387200&v=beta&t=gjQcRDzhsReGdSZjHJj-cj5kIycPAjQFo3Gkh-mGSlw"
+                        alt="" class="people-img"></div>
+                <div class="people-body">
+                    <h3 class="people-name">
+                        Oritu Samuel Oreofe (GMNSE)</h3>
+                    <p class="people-job">AEROSPACE ENGINEER</p>
+                    <button class="people-btn">Connect</button>
+                </div>
+            </div>
+            <div class="people">
+                    <div class="img-people"> <img
+                            src="https://media.licdn.com/dms/image/v2/D4E03AQFMpnPDd4Xv5Q/profile-displayphoto-shrink_100_100/B4EZWKqqAmGwAU-/0/1741788194848?e=1762387200&v=beta&t=f21i6k8HAhkX06-N3kwnOljSvdGw6DlTrB8FzPXnC9U"
+                            alt="" class="people-img"></div>
+                    <div class="people-body">
+                        <h3 class="people-name">
+                            Oluwatosin Deborah Fagbire (GMNSE)</h3>
+                        <p class="people-job">CYBERSECURITY ENTHUSIAST | TEACHER | AEROSPACE ENGINEER</p>
+                        <button class="people-btn">Connect</button>
+                    </div>
+                </div>
+                 <div class="people">
+                    <div class="img-people"> <img
+                            src="https://media.licdn.com/dms/image/v2/D5603AQEb1yK5NrgLNg/profile-displayphoto-scale_100_100/B56Zl6keLUI8Ac-/0/1758698006990?e=1762387200&v=beta&t=Rm1U0TwfWgdcJ4HTpulCyZfgWso_fMdBjrIR7A6vDGw"
+                            alt="" class="people-img"></div>
+                    <div class="people-body">
+                        <h3 class="people-name">
+                            Tayo Caleb</h3>
+                        <p class="people-job">CYBERSECURITY ENTHUSIAST</p>
+                        <button class="people-btn">Connect</button>
+                    </div>
+                </div> <div class="people">
+                    <div class="img-people"> <img
+                            src="https://media.licdn.com/dms/image/v2/D4E03AQFMpnPDd4Xv5Q/profile-displayphoto-shrink_100_100/B4EZWKqqAmGwAU-/0/1741788194848?e=1762387200&v=beta&t=f21i6k8HAhkX06-N3kwnOljSvdGw6DlTrB8FzPXnC9U"
+                            alt="" class="people-img"></div>
+                    <div class="people-body">
+                        <h3 class="people-name">
+                            Oluwatosin Deborah Fagbire (GMNSE)</h3>
+                        <p class="people-job">CYBERSECURITY ENTHUSIAST | TEACHER | AEROSPACE ENGINEER</p>
+                        <button class="people-btn">Connect</button>
+                    </div>
+                </div> <div class="people">
+                    <div class="img-people"> <img
+                            src="https://media.licdn.com/dms/image/v2/D5603AQEb1yK5NrgLNg/profile-displayphoto-scale_100_100/B56Zl6keLUI8Ac-/0/1758698006990?e=1762387200&v=beta&t=Rm1U0TwfWgdcJ4HTpulCyZfgWso_fMdBjrIR7A6vDGw"
+                            alt="" class="people-img"></div>
+                    <div class="people-body">
+                        <h3 class="people-name">
+                            Joshua Micheal</h3>
+                        <p class="people-job">TEACHER </p>
+                        <button class="people-btn">Connect</button>
+                    </div>
+                </div>
+
+            </div>
+
+            </div>
+
+            </div>
+            </div>
+            
+        </div>
+
+
+
+
+
+        </aside>
     </main>
 </body>
 
